cmake_minimum_required(VERSION 3.16)
project(Algs-sem-2)

set(CMAKE_CXX_STANDARD 20)

add_executable(task1 task1.cpp treeMap.cpp)
add_executable(task2-1 task2_1.cpp treeMap.cpp)
add_executable(task2-2 task2_2.cpp treeMap.cpp)
add_executable(task3 task3.cpp treeMap.cpp)
add_executable(task4 task4.cpp AVLtree.cpp)
add_executable(task5 task5.cpp)
